# test-clang-toolchain-with-nix

./: CMakeLists.txt  CMakePresets.json  flake.nix  justfile  main.cpp  test.cpp
nix/: package.nix
